# CarEmulationProject

./: .gitignore  README.md
Neon/: CMakeLists.txt  CMakePresets.json  DashboardSim  Dockerfile  Dockerfile.dashboard  Dockerfile.ecm  Dockerfile.tcm  EngineSim  Neon.cpp  Neon.h  build-linux.sh  build-windows.bat  build.sh  clean_docker.sh  deploy.sh  webSocketClient.py  webpage.html
Neon/dashboard/: CMakeLists.txt  Dashboard  DashboardDataSource.cpp  DashboardDataSource.h  Main.cpp  Process.cpp  Process.h  WebSocketReceiver.cpp  WebSocketReceiver.h
Neon/ecm/: CMakeLists.txt  Ecm  Main.cpp
Neon/shared/logging/: CMakeLists.txt  LogFile.cpp  LogFile.h
Neon/tcm/: CMakeLists.txt  Tcm
SimulationPlatform/: App.xaml  App.xaml.cs  AppModel.cs  MainWindow.xaml  MainWindow.xaml.cs  Package.appxmanifest  SimulationPlatform.csproj  SimulationPlatform.sln
SimulationPlatform/Controllers/: DeploymentController.cs  WebSocketController.cs
SimulationPlatform/Models/: CarData.cs  DashboardMessage.cs  DashboardModel.cs
SimulationPlatform/Pages/: DeployPage.xaml  DeployPage.xaml.cs  LoggingPage.xaml  LoggingPage.xaml.cs  TrackPage.xaml  TrackPage.xaml.cs
SimulationPlatform/Properties/: launchSettings.json
SimulationPlatform/Services/: WebSocketService.cs
SimulationPlatform/SimulationPlatform/: MainWindow.xaml  MainWindow.xaml.cs  SimulationPlatform.csproj  SimulationPlatform.sln  app.manifest
SimulationPlatform/SimulationPlatform/Pages/: DeployPage.xaml
